hard-gists/1766791/run.log
=== Docker Run Log for 1766791 ===
Started at: Mi 29. Okt 12:27:15 CET 2025

[2025-10-29 12:27:15] START: Running container for 1766791
[2025-10-29 12:27:16] SUCCESS: Container 806164b3806b1649e654582c3fa6bc12fb3753a8cfe40172918a53cef1e59740 started for 1766791
=== Container logs for 1766791 ===
  File "/snippet.py", line 22
    print vm
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1766791 ===
[2025-10-29 12:27:18] INFO: Container 806164b3806b1649e654582c3fa6bc12fb3753a8cfe40172918a53cef1e59740 has stopped
